# Mental-health-ai-backend-suggestion

./: .gitignore  Dockerfile  check_chromadb_config.py  demo.py  docker-compose.yml  learn.txt  main.py  main_lite.py  medical_interface.html  pdf_processor.py  pyproject.toml  rag_system.py  railway.toml  render.yaml  requirements.txt  start-production.sh  start.sh  test_api.py  test_chromadb_cloud.py  test_content.txt  test_medical_system.py  vector_store.py  web_interface.html
chroma_db/: chroma.sqlite3
medical_chroma_db/df6c8ac7-85fa-4b53-9c66-8e40d753b1c0/: index_metadata.pickle
